//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  name String
  imageId String [unique]
  image files
  role USER_ROLE [default: 'MEMBER']
  status INVITATION_STATUS
  recoveryCode String
  refreshToken String
  password String [not null]
  codeValidTime DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  member members [not null]
  admin members [not null]
  team teams [not null]
  project projects [not null]
  organization organizations [not null]
  board boards [not null]
  task tasks [not null]
}

Table organizations {
  id String [pk]
  name String [unique, not null]
  imageId String
  image files
  status ORGANIZATION_STATUS [not null, default: 'ACTIVE']
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  project projects [not null]
  team teams [not null]
}

Table projects {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  imageId String
  image files
  status PROJECT_STATUS [not null, default: 'ACTIVE']
  organizationId String
  organization organizations
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  projectOnTeam project_on_teams [not null]
  board boards [not null]
}

Table project_on_teams {
  id String [pk]
  projectId String
  project projects
  teamId String
  team teams
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table teams {
  id String [pk]
  name String [not null]
  imageId String
  image files
  organizationId String
  organization organizations
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  projectOnTeam project_on_teams [not null]
  member members [not null]
  board boards [not null]
}

Table members {
  id String [pk]
  teamId String
  team teams
  userId String [not null]
  user users [not null]
  status MEMBER_STATUS [not null, default: 'ACTIVE']
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tasks taskAssignOnMember [not null]
}

Table taskAssignOnMember {
  id String [pk]
  memberId String [not null]
  member members [not null]
  taskId String [not null]
  task tasks [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table boards {
  id String [pk]
  name String [not null]
  teamId String [unique]
  team teams
  projectId String
  project projects
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  task tasks [not null]
}

Table tasks {
  id String [pk]
  title String [not null]
  description String [not null]
  status TASK_STATUS [not null, default: 'ACTIVE']
  boardId String [not null]
  board boards [not null]
  startDate DateTime [default: `now()`, not null]
  dueDate DateTime [not null]
  createdUserId String [not null]
  createdBy users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  label labels [not null]
  file files [not null]
  members taskAssignOnMember [not null]
}

Table labels {
  id String [pk]
  color String [not null]
  title String [not null]
  taskId String [not null]
  task tasks [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table files {
  id String [pk]
  name String [not null]
  path String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  taskId String
  task tasks
  user users
  project projects [not null]
  organization organizations [not null]
  team teams [not null]
}

Enum USER_ROLE {
  ADMIN
  MEMBER
  SUPER_ADMIN
}

Enum ORGANIZATION_STATUS {
  ACTIVE
  BAN
}

Enum TASK_STATUS {
  EXPIRED
  ACTIVE
}

Enum PROJECT_STATUS {
  ACTIVE
  CLOSED
  ONHOLD
}

Enum MEMBER_ROLE {
  SUPER_ADMIN
  ADMIN
  LEADER
  MEMBER
}

Enum MEMBER_STATUS {
  ACTIVE
  INACTIVE
  AVAILABLE
  BUSY
  OUT_OF_OFFICE
}

Enum INVITATION_STATUS {
  INVITED
  ACCEPTED
}

Ref: users.imageId - files.id [delete: Set Null]

Ref: organizations.imageId > files.id [delete: Cascade]

Ref: organizations.createdUserId > users.id [delete: Cascade]

Ref: projects.imageId > files.id [delete: Cascade]

Ref: projects.organizationId > organizations.id [delete: Set Null]

Ref: projects.createdUserId > users.id [delete: Cascade]

Ref: project_on_teams.projectId > projects.id [delete: Set Null]

Ref: project_on_teams.teamId > teams.id [delete: Set Null]

Ref: teams.imageId > files.id [delete: Cascade]

Ref: teams.organizationId > organizations.id [delete: Set Null]

Ref: teams.createdUserId > users.id [delete: Cascade]

Ref: members.teamId > teams.id

Ref: members.userId > users.id

Ref: members.createdUserId > users.id

Ref: taskAssignOnMember.memberId > members.id [delete: Cascade]

Ref: taskAssignOnMember.taskId > tasks.id [delete: Cascade]

Ref: boards.teamId > teams.id [delete: Cascade]

Ref: boards.projectId > projects.id [delete: Set Null]

Ref: boards.createdUserId > users.id [delete: Cascade]

Ref: tasks.boardId > boards.id [delete: Cascade]

Ref: tasks.createdUserId > users.id [delete: Cascade]

Ref: labels.taskId > tasks.id [delete: No Action]

Ref: files.taskId > tasks.id [delete: Set Null]